--- a/notebooks/Local Level.ipynb
+++ b/notebooks/Local Level.ipynb
@@ -707,6 +707,9 @@
     "import statsmodels.api as sm\n",
     "\n",
     "class LocalLevelSM(sm.tsa.statespace.MLEModel):\n",
+    "    \"\"\"\n",
+    "    src: http://www.chadfulton.com/topics/local_level_nile.html\n",
+    "    \"\"\"\n",
     "    start_params = [1, 1]\n",
     "    param_names = ['obs.var', 'level.var']\n",
     "\n",
