ruff-format refactors

--- a/notebooks/discrete_markov_chain.ipynb
+++ b/notebooks/discrete_markov_chain.ipynb
@@ -336,8 +336,10 @@
    ],
    "source": [
     "# Get the RGNP data to replicate Hamilton\n",
-    "storage_options = {'User-Agent': 'Mozilla/5.0'}\n",
-    "dta = pd.read_stata(\"https://www.stata-press.com/data/r14/rgnp.dta\", storage_options=storage_options).iloc[1:]\n",
+    "storage_options = {\"User-Agent\": \"Mozilla/5.0\"}\n",
+    "dta = pd.read_stata(\n",
+    "    \"https://www.stata-press.com/data/r14/rgnp.dta\", storage_options=storage_options\n",
+    ").iloc[1:]\n",
     "dta.index = pd.DatetimeIndex(dta.date, freq=\"QS\")\n",
     "dta_hamilton = dta.rgnp\n",
     "\n",
