--- a/notebooks/multivariate_ssm.ipynb
+++ b/notebooks/multivariate_ssm.ipynb
@@ -1608,17 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "fcc14c10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_names = pd.date_range(\"1900-01-01\", \"1900-12-31\", freq=\"MS\").month_name().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "79f703dd",
    "metadata": {},
    "outputs": [],
@@ -1629,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "36ce0c20",
    "metadata": {},
    "outputs": [],
@@ -1656,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "baf82cfd",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1738,7 @@
        "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"430\" y=\"-153.11\" font-family=\"Times,serif\" font-size=\"14.00\">KalmanFilter</text>\n",
        "</g>\n",
        "<!-- P0&#45;&gt;obs -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
        "<title>P0&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M128.49,-275.49C138.4,-260.15 152.65,-242.11 170,-231.32 226.08,-196.43 300.68,-183.15 355.59,-178.23\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"355.81,-181.72 365.49,-177.42 355.24,-174.75 355.81,-181.72\"/>\n",
@@ -1776,7 +1766,7 @@
        "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"514\" y=\"-282.93\" font-family=\"Times,serif\" font-size=\"14.00\">Normal</text>\n",
        "</g>\n",
        "<!-- annual_coefs&#45;&gt;obs -->\n",
-       "<g id=\"edge5\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>annual_coefs&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M489.93,-266.85C480.7,-252.81 470.06,-236.61 460.32,-221.79\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"463.32,-219.99 454.91,-213.56 457.47,-223.84 463.32,-219.99\"/>\n",
@@ -1790,7 +1780,7 @@
        "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"761\" y=\"-282.93\" font-family=\"Times,serif\" font-size=\"14.00\">HalfNormal</text>\n",
        "</g>\n",
        "<!-- sigma_level_trend&#45;&gt;obs -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
        "<title>sigma_level_trend&#45;&gt;obs</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M722.75,-268.18C706.58,-254.9 686.89,-240.75 667,-231.32 615.03,-206.68 551.33,-192.51 503.07,-184.64\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"503.69,-181.19 493.27,-183.1 502.61,-188.11 503.69,-181.19\"/>\n",
@@ -1813,10 +1803,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x323e64440>"
+       "<graphviz.graphs.Digraph at 0x32028ef90>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
