refactor: re-ran notebook

--- a/notebooks/INLA_testing.ipynb
+++ b/notebooks/INLA_testing.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e344b7d0-f76e-4a28-9be9-884a2ba1f2c4",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "f1eb9a04-15dd-437d-bcf0-ce369feec912",
    "metadata": {},
    "outputs": [
@@ -624,10 +624,124 @@
       "collected 3 items                                                              \u001b[0m\u001b[1m\n",
       "\n",
       "../tests/test_inla.py::test_non_gaussian_latent \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 33%]\u001b[0m\n",
-      "../tests/test_inla.py::test_non_precision_MvNormal \u001b[32mPASSED\u001b[0m\u001b[32m                [ 66%]\u001b[0m\n",
-      "../tests/test_inla.py::test_3_layer_normal \u001b[32mPASSED\u001b[0m\u001b[32m                        [100%]\u001b[0m\n",
+      "../tests/test_inla.py::test_non_precision_MvNormal \u001b[31mFAILED\u001b[0m\u001b[31m                [ 66%]\u001b[0m\n",
+      "../tests/test_inla.py::test_3_layer_normal \u001b[31mFAILED\u001b[0m\u001b[31m                        [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 19.44s\u001b[0m\u001b[32m ==============================\u001b[0m\n"
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m_________________________ test_non_precision_MvNormal __________________________\u001b[0m\n",
+      "\n",
+      "rng = Generator(PCG64) at 0x7F6BDC40DC40\n",
+      "\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_non_precision_MvNormal\u001b[39;49;00m(rng):\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m    \u001b[39;49;00m\u001b[33m\"\"\"\u001b[39;49;00m\n",
+      "    \u001b[33m    INLA should raise an error if trying to use a latent not in precision form\u001b[39;49;00m\n",
+      "    \u001b[33m    \"\"\"\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "        n = \u001b[94m10000\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "        d = \u001b[94m3\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      "        mu_mu = np.zeros((d,))\u001b[90m\u001b[39;49;00m\n",
+      "        mu_true = rng.random(d)\u001b[90m\u001b[39;49;00m\n",
+      "        tau = np.identity(d)\u001b[90m\u001b[39;49;00m\n",
+      "        cov = np.linalg.inv(tau)\u001b[90m\u001b[39;49;00m\n",
+      "        y_obs = rng.multivariate_normal(mean=mu_true, cov=cov, size=n)\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      "        \u001b[94mwith\u001b[39;49;00m pm.Model() \u001b[94mas\u001b[39;49;00m model:\u001b[90m\u001b[39;49;00m\n",
+      "            mu = pm.MvNormal(\u001b[33m\"\u001b[39;49;00m\u001b[33mmu\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, mu=mu_mu, tau=tau)\u001b[90m\u001b[39;49;00m\n",
+      "            x = pm.MvNormal(\u001b[33m\"\u001b[39;49;00m\u001b[33mx\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, mu=mu, cov=cov)\u001b[90m\u001b[39;49;00m\n",
+      "            y = pm.MvNormal(\u001b[33m\"\u001b[39;49;00m\u001b[33my\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, mu=x, tau=tau, observed=y_obs)\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      "            \u001b[94mwith\u001b[39;49;00m pytest.raises(\u001b[96mValueError\u001b[39;49;00m):\u001b[90m\u001b[39;49;00m\n",
+      ">               pmx.fit(method=\u001b[33m\"\u001b[39;49;00m\u001b[33mINLA\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, x=x)\u001b[90m\u001b[39;49;00m\n",
+      "\n",
+      "\u001b[1m\u001b[31m../tests/test_inla.py\u001b[0m:67: \n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\u001b[1m\u001b[31m../pymc_extras/inference/fit.py\u001b[0m:47: in fit\n",
+      "    \u001b[0m\u001b[94mreturn\u001b[39;49;00m fit_INLA(**kwargs)\u001b[90m\u001b[39;49;00m\n",
+      "           ^^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "x = x, temp_kwargs = None, model = None, minimizer_kwargs = None\n",
+      "return_latent_posteriors = True, sampler_kwargs = {}\n",
+      "\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mfit_INLA\u001b[39;49;00m(\u001b[90m\u001b[39;49;00m\n",
+      "        x: TensorVariable,\u001b[90m\u001b[39;49;00m\n",
+      "        temp_kwargs=\u001b[94mNone\u001b[39;49;00m,  \u001b[90m# TODO REMOVE. DEBUGGING TOOL\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "        model: pm.Model | \u001b[94mNone\u001b[39;49;00m = \u001b[94mNone\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "        minimizer_kwargs: \u001b[96mdict\u001b[39;49;00m | \u001b[94mNone\u001b[39;49;00m = \u001b[94mNone\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "        return_latent_posteriors: \u001b[96mbool\u001b[39;49;00m = \u001b[94mTrue\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "        **sampler_kwargs,\u001b[90m\u001b[39;49;00m\n",
+      "    ) -> az.InferenceData:\u001b[90m\u001b[39;49;00m\n",
+      ">       warnings.warn(\u001b[33m'\u001b[39;49;00m\u001b[33mCurrently only valid for a nested normal model. WIP.\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[96mUserWarning\u001b[39;49;00m)\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       UserWarning: Currently only valid for a nested normal model. WIP.\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m../pymc_extras/inference/inla.py\u001b[0m:151: UserWarning\n",
+      "\u001b[31m\u001b[1m_____________________________ test_3_layer_normal ______________________________\u001b[0m\n",
+      "\n",
+      "rng = Generator(PCG64) at 0x7F6BDC40DC40\n",
+      "\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_3_layer_normal\u001b[39;49;00m(rng):\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m    \u001b[39;49;00m\u001b[33m\"\"\"\u001b[39;49;00m\n",
+      "    \u001b[33m    Test INLA against a simple toy problem:\u001b[39;49;00m\n",
+      "    \u001b[33m\u001b[39;49;00m\n",
+      "    \u001b[33m    mu ~ N(mu_mu, I)\u001b[39;49;00m\n",
+      "    \u001b[33m    x ~ N(mu, I)\u001b[39;49;00m\n",
+      "    \u001b[33m    y ~ N(x, I)\u001b[39;49;00m\n",
+      "    \u001b[33m\u001b[39;49;00m\n",
+      "    \u001b[33m    The mean of the posterior should be the midpoint between mu_mu and mu_true\u001b[39;49;00m\n",
+      "    \u001b[33m    \"\"\"\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "        n = \u001b[94m10000\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "        d = \u001b[94m3\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      "        mu_mu = \u001b[94m10\u001b[39;49;00m * rng.random(d)\u001b[90m\u001b[39;49;00m\n",
+      "        mu_true = rng.random(d)\u001b[90m\u001b[39;49;00m\n",
+      "        tau = np.identity(d)\u001b[90m\u001b[39;49;00m\n",
+      "        cov = np.linalg.inv(tau)\u001b[90m\u001b[39;49;00m\n",
+      "        y_obs = rng.multivariate_normal(mean=mu_true, cov=cov, size=n)\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      "        \u001b[94mwith\u001b[39;49;00m pm.Model() \u001b[94mas\u001b[39;49;00m model:\u001b[90m\u001b[39;49;00m\n",
+      "            mu = pm.MvNormal(\u001b[33m\"\u001b[39;49;00m\u001b[33mmu\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, mu=mu_mu, tau=tau)\u001b[90m\u001b[39;49;00m\n",
+      "            x = pm.MvNormal(\u001b[33m\"\u001b[39;49;00m\u001b[33mx\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, mu=mu, tau=tau)\u001b[90m\u001b[39;49;00m\n",
+      "            y = pm.MvNormal(\u001b[33m\"\u001b[39;49;00m\u001b[33my\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, mu=x, tau=tau, observed=y_obs)\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      ">           idata = pmx.fit(\u001b[90m\u001b[39;49;00m\n",
+      "                method=\u001b[33m\"\u001b[39;49;00m\u001b[33mINLA\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "                x=x,\u001b[90m\u001b[39;49;00m\n",
+      "                temp_kwargs=[n, y_obs],  \u001b[90m# TODO REMOVE LATER - DEBUGGING TOOL\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "                return_latent_posteriors=\u001b[94mFalse\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "            )\u001b[90m\u001b[39;49;00m\n",
+      "\n",
+      "\u001b[1m\u001b[31m../tests/test_inla.py\u001b[0m:94: \n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\u001b[1m\u001b[31m../pymc_extras/inference/fit.py\u001b[0m:47: in fit\n",
+      "    \u001b[0m\u001b[94mreturn\u001b[39;49;00m fit_INLA(**kwargs)\u001b[90m\u001b[39;49;00m\n",
+      "           ^^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "x = x\n",
+      "temp_kwargs = [10000, array([[-0.92256686,  0.34251042, -1.07012389],\n",
+      "       [ 1.54076702, -0.55042364,  1.023203  ],\n",
+      "       [ 2.251...37462 ,  0.78161016],\n",
+      "       [ 2.21600752, -0.66114102, -0.10427736],\n",
+      "       [ 1.37171357, -0.27766388, -0.73127505]])]\n",
+      "model = None, minimizer_kwargs = None, return_latent_posteriors = False\n",
+      "sampler_kwargs = {}\n",
+      "\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mfit_INLA\u001b[39;49;00m(\u001b[90m\u001b[39;49;00m\n",
+      "        x: TensorVariable,\u001b[90m\u001b[39;49;00m\n",
+      "        temp_kwargs=\u001b[94mNone\u001b[39;49;00m,  \u001b[90m# TODO REMOVE. DEBUGGING TOOL\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "        model: pm.Model | \u001b[94mNone\u001b[39;49;00m = \u001b[94mNone\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "        minimizer_kwargs: \u001b[96mdict\u001b[39;49;00m | \u001b[94mNone\u001b[39;49;00m = \u001b[94mNone\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "        return_latent_posteriors: \u001b[96mbool\u001b[39;49;00m = \u001b[94mTrue\u001b[39;49;00m,\u001b[90m\u001b[39;49;00m\n",
+      "        **sampler_kwargs,\u001b[90m\u001b[39;49;00m\n",
+      "    ) -> az.InferenceData:\u001b[90m\u001b[39;49;00m\n",
+      ">       warnings.warn(\u001b[33m'\u001b[39;49;00m\u001b[33mCurrently only valid for a nested normal model. WIP.\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[96mUserWarning\u001b[39;49;00m)\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       UserWarning: Currently only valid for a nested normal model. WIP.\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m../pymc_extras/inference/inla.py\u001b[0m:151: UserWarning\n",
+      "\u001b[36m\u001b[1m=========================== short test summary info ============================\u001b[0m\n",
+      "\u001b[31mFAILED\u001b[0m ../tests/test_inla.py::\u001b[1mtest_non_precision_MvNormal\u001b[0m - UserWarning: Currently only valid for a nested normal model. WIP.\n",
+      "\u001b[31mFAILED\u001b[0m ../tests/test_inla.py::\u001b[1mtest_3_layer_normal\u001b[0m - UserWarning: Currently only valid for a nested normal model. WIP.\n",
+      "\u001b[31m========================= \u001b[31m\u001b[1m2 failed\u001b[0m, \u001b[32m1 passed\u001b[0m\u001b[31m in 2.37s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
      ]
     }
    ],
