Fix with pre commit checks

--- a/notebooks/deterministic_advi_example.ipynb
+++ b/notebooks/deterministic_advi_example.ipynb
@@ -65,7 +65,7 @@
     "rng = np.random.default_rng(RANDOM_SEED)\n",
     "\n",
     "%config InlineBackend.figure_format = 'retina'\n",
-    "az.style.use(\"arviz-darkgrid\")\n"
+    "az.style.use(\"arviz-darkgrid\")"
    ]
   },
   {
@@ -916,14 +916,14 @@
     "\n",
     "f, ax = plt.subplots(3, 1)\n",
     "\n",
-    "sns.kdeplot(idata.posterior.Intercept.values.reshape(-1), ax=ax[0], label='MCMC')\n",
-    "sns.kdeplot(dadvi_res.Intercept.values.reshape(-1), ax=ax[0], label='DADVI')\n",
+    "sns.kdeplot(idata.posterior.Intercept.values.reshape(-1), ax=ax[0], label=\"MCMC\")\n",
+    "sns.kdeplot(dadvi_res.Intercept.values.reshape(-1), ax=ax[0], label=\"DADVI\")\n",
     "\n",
-    "sns.kdeplot(idata.posterior.slope.values.reshape(-1), ax=ax[1], label='MCMC')\n",
-    "sns.kdeplot(dadvi_res.slope.values.reshape(-1), ax=ax[1], label='DADVI')\n",
+    "sns.kdeplot(idata.posterior.slope.values.reshape(-1), ax=ax[1], label=\"MCMC\")\n",
+    "sns.kdeplot(dadvi_res.slope.values.reshape(-1), ax=ax[1], label=\"DADVI\")\n",
     "\n",
-    "sns.kdeplot(idata.posterior.sigma.values.reshape(-1), ax=ax[2], label='MCMC')\n",
-    "sns.kdeplot(dadvi_res.sigma.values.reshape(-1), ax=ax[2], label='DADVI')\n",
+    "sns.kdeplot(idata.posterior.sigma.values.reshape(-1), ax=ax[2], label=\"MCMC\")\n",
+    "sns.kdeplot(dadvi_res.sigma.values.reshape(-1), ax=ax[2], label=\"DADVI\")\n",
     "\n",
     "for cur_ax in ax:\n",
     "    cur_ax.legend()\n",
