Switch to new Scan API

--- a/notebooks/DFM_Example_(Coincident_Index).ipynb
+++ b/notebooks/DFM_Example_(Coincident_Index).ipynb
@@ -930,19 +930,19 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3m                                     Model Requirements                                     \u001b[0m\n",
+       "\u001B[3m                                     Model Requirements                                     \u001B[0m\n",
        "                                                                                            \n",
-       " \u001b[1m \u001b[0m\u001b[1mVariable       \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mShape   \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mConstraints           \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m                        Dimensions\u001b[0m\u001b[1m \u001b[0m \n",
+       " \u001B[1m \u001B[0m\u001B[1mVariable       \u001B[0m\u001B[1m \u001B[0m \u001B[1m \u001B[0m\u001B[1mShape   \u001B[0m\u001B[1m \u001B[0m \u001B[1m \u001B[0m\u001B[1mConstraints           \u001B[0m\u001B[1m \u001B[0m \u001B[1m \u001B[0m\u001B[1m                        Dimensions\u001B[0m\u001B[1m \u001B[0m \n",
        " ────────────────────────────────────────────────────────────────────────────────────────── \n",
-       "  x0                \u001b[1m(\u001b[0m\u001b[1;36m10\u001b[0m,\u001b[1m)\u001b[0m                                                       \u001b[1m(\u001b[0m\u001b[32m'state'\u001b[0m,\u001b[1m)\u001b[0m  \n",
-       "  P0                \u001b[1m(\u001b[0m\u001b[1;36m10\u001b[0m, \u001b[1;36m10\u001b[0m\u001b[1m)\u001b[0m   Positive Semi-definite               \u001b[1m(\u001b[0m\u001b[32m'state'\u001b[0m, \u001b[32m'state_aux'\u001b[0m\u001b[1m)\u001b[0m  \n",
-       "  factor_loadings   \u001b[1m(\u001b[0m\u001b[1;36m4\u001b[0m, \u001b[1;36m1\u001b[0m\u001b[1m)\u001b[0m                                    \u001b[1m(\u001b[0m\u001b[32m'observed_state'\u001b[0m, \u001b[32m'factor'\u001b[0m\u001b[1m)\u001b[0m  \n",
-       "  factor_ar         \u001b[1m(\u001b[0m\u001b[1;36m1\u001b[0m, \u001b[1;36m2\u001b[0m\u001b[1m)\u001b[0m                                            \u001b[1m(\u001b[0m\u001b[32m'factor'\u001b[0m, \u001b[32m'lag_ar'\u001b[0m\u001b[1m)\u001b[0m  \n",
-       "  error_ar          \u001b[1m(\u001b[0m\u001b[1;36m4\u001b[0m, \u001b[1;36m2\u001b[0m\u001b[1m)\u001b[0m                              \u001b[1m(\u001b[0m\u001b[32m'observed_state'\u001b[0m, \u001b[32m'error_lag_ar'\u001b[0m\u001b[1m)\u001b[0m  \n",
-       "  error_sigma       \u001b[1m(\u001b[0m\u001b[1;36m4\u001b[0m,\u001b[1m)\u001b[0m       Positive                                \u001b[1m(\u001b[0m\u001b[32m'observed_state'\u001b[0m,\u001b[1m)\u001b[0m  \n",
+       "  x0                \u001B[1m(\u001B[0m\u001B[1;36m10\u001B[0m,\u001B[1m)\u001B[0m                                                       \u001B[1m(\u001B[0m\u001B[32m'state'\u001B[0m,\u001B[1m)\u001B[0m  \n",
+       "  P0                \u001B[1m(\u001B[0m\u001B[1;36m10\u001B[0m, \u001B[1;36m10\u001B[0m\u001B[1m)\u001B[0m   Positive Semi-definite               \u001B[1m(\u001B[0m\u001B[32m'state'\u001B[0m, \u001B[32m'state_aux'\u001B[0m\u001B[1m)\u001B[0m  \n",
+       "  factor_loadings   \u001B[1m(\u001B[0m\u001B[1;36m4\u001B[0m, \u001B[1;36m1\u001B[0m\u001B[1m)\u001B[0m                                    \u001B[1m(\u001B[0m\u001B[32m'observed_state'\u001B[0m, \u001B[32m'factor'\u001B[0m\u001B[1m)\u001B[0m  \n",
+       "  factor_ar         \u001B[1m(\u001B[0m\u001B[1;36m1\u001B[0m, \u001B[1;36m2\u001B[0m\u001B[1m)\u001B[0m                                            \u001B[1m(\u001B[0m\u001B[32m'factor'\u001B[0m, \u001B[32m'lag_ar'\u001B[0m\u001B[1m)\u001B[0m  \n",
+       "  error_ar          \u001B[1m(\u001B[0m\u001B[1;36m4\u001B[0m, \u001B[1;36m2\u001B[0m\u001B[1m)\u001B[0m                              \u001B[1m(\u001B[0m\u001B[32m'observed_state'\u001B[0m, \u001B[32m'error_lag_ar'\u001B[0m\u001B[1m)\u001B[0m  \n",
+       "  error_sigma       \u001B[1m(\u001B[0m\u001B[1;36m4\u001B[0m,\u001B[1m)\u001B[0m       Positive                                \u001B[1m(\u001B[0m\u001B[32m'observed_state'\u001B[0m,\u001B[1m)\u001B[0m  \n",
        "                                                                                            \n",
-       "\u001b[2;3m  These parameters should be assigned priors inside a PyMC model block before calling the   \u001b[0m\n",
-       "\u001b[2;3m                               build_statespace_graph method.                               \u001b[0m\n"
+       "\u001B[2;3m  These parameters should be assigned priors inside a PyMC model block before calling the   \u001B[0m\n",
+       "\u001B[2;3m                               build_statespace_graph method.                               \u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -1759,8 +1759,11 @@
     "        K = pt.linalg.solve(F, PZT.T, assume_a=\"pos\", check_finite=False).T\n",
     "        return K\n",
     "\n",
-    "    ss_kalman_gain, updates = pytensor.scan(\n",
-    "        step, non_sequences=[Z, T, H], sequences=[predicted_covariance]\n",
+    "    ss_kalman_gain = pytensor.scan(\n",
+    "        step,\n",
+    "        non_sequences=[Z, T, H],\n",
+    "        sequences=[predicted_covariance],\n",
+    "        return_updates=False,\n",
     "    )\n",
     "    # Get the last Kalman gain (steady state)\n",
     "    ss_kalman_gain = ss_kalman_gain[-1]\n",
