--- a/notebooks/discrete_markov_chain.ipynb
+++ b/notebooks/discrete_markov_chain.ipynb
@@ -558,13 +558,14 @@
     "\n",
     "        return y_out\n",
     "\n",
-    "    result, updates = pytensor.scan(\n",
+    "    result = pytensor.scan(\n",
     "        AR_step,\n",
     "        sequences=[\n",
     "            {\"input\": hidden_states, \"taps\": [0, -1, -2, -3, -4]},\n",
     "            {\"input\": y, \"taps\": [-1, -2, -3, -4]},\n",
     "        ],\n",
     "        non_sequences=[state_mus, ar_coefs],\n",
+    "        return_updates=False,\n",
     "    )\n",
     "\n",
     "    sigma = pm.HalfCauchy(\"sigma\", 0.8)\n",
